congregation page complete, navbar + scrollbar fix

--- a/ecos-app/src/app/components/congregation/page/css/congregationContent.module.css
+++ b/ecos-app/src/app/components/congregation/page/css/congregationContent.module.css
@@ -11,6 +11,7 @@
 }
 
 .container {
+    position: relative;
     width: 100%;
     height: 90%;
     display: flex;
@@ -174,4 +175,126 @@
     width: 32.5%;
     border-radius: 1rem;
     background-color: var(--color--contrast);
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.businessesContainer h4 {
+    width: 100%;
+    height: 7.5%;
+    color: var(--color--text);
+    border-bottom: solid 1px var(--color--subtext);
+}
+
+.bLoader {
+    width: 40px;
+    aspect-ratio: 1 / 1.5;
+}
+
+.bSelectText {
+    color: var(--color--subtext);
+}
+
+.bLoading {
+    justify-content: center !important;
+}
+
+.businessList {
+    width: 100%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    list-style: none;
+    overflow-y: scroll;
+    padding: 5px;
+}
+
+.businessListResult {
+    width: 100%;
+    height: 150px;
+    margin-bottom: 10px;
+}
+
+.businessListResult a {
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    background-color: var(--color--accent);
+    border-radius: 1rem;
+
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.businessListResultName {
+    width: 100%;
+    height: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.businessListResultName img {
+    height: 100%;
+    aspect-ratio: 1 / 1;
+}
+
+.businessListResultName p {
+    color: var(--color--text);
+}
+
+.businessListResultState {
+    color: var(--color--text);
+    font-size: small;
+
+    &::before {
+        content: "State:";
+        margin-right: 5px;
+        color: var(--color--subtext);
+        font-size: x-small;
+    }
+}
+
+.businessListResultCongregation {
+    color: var(--color--text);
+    font-size: small;
+
+    &::before {
+        content: "Congregation:";
+        margin-right: 5px;
+        color: var(--color--subtext);
+        font-size: x-small;
+    }
+}
+
+@media (max-width: 996px) {
+    .container {
+        height: auto;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .congregationsContainer {
+        height: 100vh;
+        width: 90%;
+    }
+
+    .businessesContainer {
+        margin-top: 5vh;
+        height: 100vh;
+        width: 90%;
+    }
 }
