--- a/ecos-app/src/app/components/navbar/navbar.module.css
+++ b/ecos-app/src/app/components/navbar/navbar.module.css
@@ -87,7 +87,7 @@
 
 .header {
     width: 100%;
-    height: 5%;
+    height: 50px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -97,11 +97,21 @@
     color: var(--color--text);
 }
 
-.gold {
-    height: 100%;
+.headerName {
+    width: 100%;
+    height: 50%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.gold {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
     align-items: center;
 }
 
